--- a/package.json
+++ b/package.json
@@ -6,7 +6,16 @@
     "iconFile": "resources/icon.png",
     "wipeColor": "",
     "requestedPermissions": [
-      "access_heart_rate"
-    ]
+      "access_heart_rate",
+      "access_activity"
+    ],
+    "buildTargets": [
+      "higgs"
+    ],
+    "i18n": {
+      "en": {
+        "name": "GYMMER Clock"
+      }
+    }
   }
 }
